@@ -1,3 +1,10 @@
+Fri Apr 28 15:59:27 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	* events.c (event_queue_process): Call update_time_from_event
+ 	every time an event is removed from the queue.
+	(update_time_from_event): Delete assertion that a negative
+ 	time_from_event implies an empty event queue.
+
 Fri Apr 28 15:53:54 2000  Andrew Cagney  <cagney@b1.cygnus.com>
 
 	* interrupts.c (deliver_hardware_interrupt): Print time trace in
